Add Memory.{Browser,Renderer}.Large2 metrics

Memory.Browser.Large reports incorrect numbers (it should report in
MB but in KB now). Deprecate it and add a new metric to report
correct numbers. Also deprecate Memory.{Browser,Renderer} because
they are capped at .5GB which isn't enough. Memory.Renderer is
replaced with Memory.Renderer.Large2 ("Large2" is for consistency).

BUG=629354

Review-Url: https://codereview.chromium.org/2162783002
Cr-Commit-Position: refs/heads/master@{#406245}

Former-commit-id: a5ab9c63598a171e32513ae23df9c034cbd9849b