chrome/browser/metrics/metrics_memory_details.cc
@@ -89,8 +89,7 @@ void MetricsMemoryDetails::UpdateHistograms() {
     aggregate_memory += sample;
     switch (browser.processes[index].process_type) {
       case content::PROCESS_TYPE_BROWSER:
-        UMA_HISTOGRAM_MEMORY_KB("Memory.Browser", sample);
-        UMA_HISTOGRAM_MEMORY_LARGE_MB("Memory.Browser.Large", sample);
+        UMA_HISTOGRAM_MEMORY_LARGE_MB("Memory.Browser.Large2", sample / 1024);
         continue;
       case content::PROCESS_TYPE_RENDERER: {
         ProcessMemoryInformation::RendererProcessType renderer_type =
@@ -110,7 +109,8 @@ void MetricsMemoryDetails::UpdateHistograms() {
           case ProcessMemoryInformation::RENDERER_NORMAL:
           default:
             // TODO(erikkay): Should we bother splitting out the other subtypes?
-            UMA_HISTOGRAM_MEMORY_KB("Memory.Renderer", sample);
+            UMA_HISTOGRAM_MEMORY_LARGE_MB("Memory.Renderer.Large2",
+                                          sample / 1024);
             int diff;
             if (memory_growth_tracker_ &&
                 memory_growth_tracker_->UpdateSample(
