chrome/browser/metrics/metrics_memory_details_browsertest.cc
@@ -52,10 +52,11 @@ IN_PROC_BROWSER_TEST_F(MetricsMemoryDetailsBrowserTest, TestMemoryDetails) {
   scoped_refptr<TestMemoryDetails> details(new TestMemoryDetails);
   details->StartFetchAndWait();
 
-  // Memory.Browser histogram should have a single non-0 sample recorded.
-  histogram_tester.ExpectTotalCount("Memory.Browser", 1);
+  // Memory.Browser.Large2 histogram should have a single non-0 sample recorded.
+  histogram_tester.ExpectTotalCount("Memory.Browser.Large2", 1);
   std::unique_ptr<base::HistogramSamples> samples(
-      histogram_tester.GetHistogramSamplesSinceCreation("Memory.Browser"));
+      histogram_tester.GetHistogramSamplesSinceCreation(
+          "Memory.Browser.Large2"));
   ASSERT_TRUE(samples);
   EXPECT_NE(0, samples->sum());
 }
